# ies

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  changelog.md
license/: IES-LICENSE.txt
src/: CMakeLists.txt
src/app/: benchmark.cpp  performance.cpp  test-all.cpp  test-console.cpp  test-cpp11only.cpp
src/cmake/: ies-config.cmake.in
src/ies/: CMakeLists.txt  version.hpp
src/ies/Common/: AdjacentArrayRange.hxx  AdjacentArrayRangeTest.cpp  AdjacentVectorRange.hxx  AdjacentVectorRangeTest.cpp  Byte.cpp  Byte.hpp  ByteTest.cpp  CMakeLists.txt  Endian.hxx  EndianTest.cpp  Extremum.hpp  FastIntegerPow.hxx  FastIntegerPowTest.cpp  IntRangeUtil.cpp  IntRangeUtil.hpp  IntRangeUtilTest.cpp  IntegerPow.hxx  IntegerPowBuildTime.cpp  IntegerPowTest.cpp  IntegralRange.hxx  IntegralRangeBuildTime.cpp  IntegralRangeList.hxx  IntegralRangeListTest.cpp  IntegralRangeTest.cpp  IntegralRangeUsing.hpp  NamedObject.cpp  NamedObject.hpp  Pimpl.hxx  PimplTestClass.cpp  PimplTestClass.hpp  PimplTestClassImpl.cpp  PimplTestClassImpl.hpp  PimplTestClassTest.cpp  RangeSide.hpp  SmartEnum.hxx  SmartEnumBuildTime.cpp  SmartEnumCpp11.hxx  SmartEnumCpp11Test.cpp  SmartEnumTest.cpp  StringTree.cpp  (+3 more)
src/ies/StdUtil/: AdditionOrderedPtrHashMap.hxx  AdditionOrderedPtrHashMapTest.cpp  AdditionOrderedPtrHashSet.hxx  AdditionOrderedPtrHashSetTest.cpp  CMakeLists.txt  ClassMacro.hpp  Cpp11MakeUnique.hxx  EnumUtil.hxx  EnumUtilTest.cpp  EraseIf.hxx  EraseIfTest.cpp  Find.hxx  FindBuildTime.cpp  FindTest.cpp  FormatString.hxx  FormatStringTest.cpp  IsIn.hxx  IsInTest.cpp  MapApply.hxx  MapApplyTest.cpp  RequireCpp11.hpp  RequireCpp11Only.hpp  RequireCpp14.hpp  RequireCpp17.hpp  RequireCpp20.hpp  RequireCpp23.hpp  ReverseEqualRange.hxx  ReverseEqualRangeTest.cpp
src/ies/String/: CMakeLists.txt  Levenshtein.cpp  Levenshtein.hpp  LevenshteinTest.cpp  RecursiveReplace.cpp  RecursiveReplace.hpp  RecursiveReplaceTest.cpp  SplitString.cpp  SplitString.hpp  SplitStringTest.cpp  SplitStringView.cpp  SplitStringView.hpp  SplitStringViewTest.cpp
src/ies/Terminal/: CMakeLists.txt  Color.hpp
src/ies/Time/: CMakeLists.txt  ScopeTimePrinter.hxx  TimeUtil.hxx  TimeUtilFormat.hxx  TimeUtilTest.cpp  Timer.cpp  Timer.hpp  TimerTest.cpp
src/ies/Type/: CMakeLists.txt  Cpp11VoidT.hxx  HasStdToString.hxx  IsAssociativeContainer.hxx  IsAssociativeContainerV.hxx  IsDuration.hxx  IsDurationV.hxx  IsJson.hxx  IsJsonV.hxx  IsMap.hxx  IsMapTest.cpp
